[package]
name = "dzong-bloom"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Bloom Filter implementation for Dzong."

[dependencies]
dzong-common = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
murmur3 = "0.5"
