[package]
name = "dzong-compaction"
version.workspace = true
edition = "2021"

[dependencies]
dzong-common = { path = "../dzong-common" }
dzong-sstable = { path = "../dzong-sstable" }
dzong-manifest = { path = "../dzong-manifest" }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8"
