[package]
name = "dzong-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Core engine logic for Dzong (MemTable, Compaction, Engine)."

[dependencies]
dzong-common = { workspace = true }
dzong-storage = { workspace = true }
dzong-wal = { workspace = true }
dzong-sstable = { workspace = true }
dzong-bloom = { workspace = true }

thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
crossbeam.workspace = true
tokio = { workspace = true, optional = true }

[features]
default = []
async = ["tokio"]
