[package]
name = "dzong-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Core engine logic for Dzong (MemTable, Compaction, Engine)."

[dependencies]
dzong-common = { workspace = true }
dzong-wal = { workspace = true }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.10"
