[package]
name = "dzong-sstable"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "SSTable storage implementation for Dzong."

[dependencies]
dzong-common = { workspace = true }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.10"
