[package]
name = "dzong-testing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Benchmarking and integration testing helpers for Dzong."

[dependencies]
dzong-core = { workspace = true }
dzong-common = { workspace = true }
criterion = "0.5"
rand = "0.8"
rand_chacha = "0.3"
tempfile = "3.8"

[[bench]]
name = "storage_bench"
harness = false
