[package]
name = "dzong-wal"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Write-Ahead Log implementation for Dzong."

[dependencies]
dzong-common = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
crc32fast = "1.3"

[dev-dependencies]
tempfile = "3.10"
